# BuildMaster

./: README.md  ci-build.sh  ci-linux-setup.sh  ci-mingw-setup.sh  ci-unit-test.sh  install_build_master.sh  install_dependencies.sh  install_meson.sh  meson.build  meson.build.template  yocto_install_build_master.sh  yocto_install_meson.sh
.github/workflows/: debug_unit_test.yml  release_unit_test.yml  static.yml  unit_test.yml  windows_debug_unit_test.yml  windows_release_unit_test.yml
docs/: mkdocs.yml  wrangler.jsonc
docs/docs/: index.md
docs/site/: 404.html  index.html
include/build_master/: invoke_meson.hpp  json_parse.hpp  meson_build_gen.hpp  meson_build_template.hpp  misc.hpp  pre_config_script.hpp  version.hpp
source/: build_master.main.cpp  invoke_meson.cpp  json_parse.cpp  main.cpp  main.meson_exec.cpp  meson_build_gen.cpp  misc.cpp  pre_config_script.cpp
subprojects/: cli11.wrap  invoke.wrap  nlohmann_json.wrap  reproc.wrap
unit_test/: arttest.py  preliminary_tests.py  real_world_tests.py  test_base.py  unit_test.py
unit_test/meson_build_gen/case1/: build_master.json
unit_test/meson_build_gen/case2/: build_master.json
unit_test/meson_build_gen/case3/: build_master.json
unit_test/meson_build_gen/case4/: build_master.json
unit_test/meson_build_gen/case5/: build_master.json
unit_test/meson_build_gen/case6/: build_master.json  meson.build
